// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - private - services - weather - WeatherCard => Test when dont have Icon name 1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <a
        class="com-link"
        href="www.www"
        title="Ver clima en mendoza"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </a>
    </div>
    <div
      class="box-icon"
    >
      <p
        class="com-text --font-bold --twoxl"
      >
        25
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
    <div
      class="temperature"
    >
      <span
        class="com-text --5xs"
      >
        Mín:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        18º
      </span>
      <span
        class="com-text --5xs"
      >
        Máx:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        18º
      </span>
    </div>
    <h3
      class="com-text --fivexs"
    >
      <a
        class="com-link"
        href="www.www"
        title="Ver clima en mendoza"
      >
        Ver clima en mendoza
      </a>
    </h3>
  </div>
</div>
`;

exports[`Components - private - services - weather - WeatherCard => Test when dont have location name 1`] = `<div />`;

exports[`Components - private - services - weather - WeatherCard => Test when dont have min and max temperature and dont have link 1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <span
        class="com-text"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </span>
      <p
        class="description --font-light --fivexs"
      >
        sun
      </p>
    </div>
    <div
      class="box-icon"
    >
      <i
        class="icon --icon-48"
      >
        <mock-icon
          critical=""
          name="sun"
        />
      </i>
      <p
        class="com-text --font-bold --twoxl"
      >
        29
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`Components - private - services - weather - WeatherCard => Test when dont have min or max temperature  1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </a>
      <p
        class="description --font-light --fivexs"
      >
        sun
      </p>
    </div>
    <div
      class="box-icon"
    >
      <i
        class="icon --icon-48"
      >
        <mock-icon
          critical=""
          name="sun"
        />
      </i>
      <p
        class="com-text --font-bold --twoxl"
      >
        29
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
    <h3
      class="com-text --fivexs"
    >
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        Ver clima en mendoza
      </a>
    </h3>
  </div>
</div>
`;

exports[`Components - private - services - weather - WeatherCard => Test when have complete data 1`] = `
<div>
  <div
    class="weather-card"
  >
    <div>
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        <h2
          class="com-text --font-bold --2xs"
        >
          mendoza
        </h2>
      </a>
      <p
        class="description --font-light --fivexs"
      >
        sun
      </p>
    </div>
    <div
      class="box-icon"
    >
      <i
        class="icon --icon-48"
      >
        <mock-icon
          critical=""
          name="sun"
        />
      </i>
      <p
        class="com-text --font-bold --twoxl"
      >
        29
        <span
          class="com-text --m"
        >
          ºc
        </span>
      </p>
    </div>
    <div
      class="temperature"
    >
      <span
        class="com-text --5xs"
      >
        Mín:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        0º
      </span>
      <span
        class="com-text --5xs"
      >
        Máx:
      </span>
      <span
        class="com-text --font-bold --4xs"
      >
        25º
      </span>
    </div>
    <h3
      class="com-text --fivexs"
    >
      <a
        class="com-link"
        href="www.com"
        title="Ver clima en mendoza"
      >
        Ver clima en mendoza
      </a>
    </h3>
  </div>
</div>
`;
